--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -7,4 +7,6 @@
         android:topLeftRadius="12dp"
         android:topRightRadius="12dp" />
     <solid android:color="@color/blue" />
+    <solid android:textColor="@color/white" />
+
 </shape>
