--- a/app/src/main/res/layout/fragment_cancelation.xml
+++ b/app/src/main/res/layout/fragment_cancelation.xml
@@ -21,6 +21,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rent_inits_recycler"
+        android:padding="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
