--- a/app/src/main/res/layout/rent_time.xml
+++ b/app/src/main/res/layout/rent_time.xml
@@ -10,17 +10,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/time_recycler"
         android:layout_width="match_parent"
-        android:layout_height="470dp"
+        android:layout_height="match_parent"
         android:layout_above="@id/booking_button"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="38dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/booking_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/booking_button"
@@ -29,7 +29,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="90dp"
         android:layout_marginEnd="90dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/blue_shape"
         android:fontFamily="@font/inter_bold"
         android:padding="16dp"
@@ -45,7 +45,7 @@
     <TextView
         android:id="@+id/textView12"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
 
         android:background="@color/blue"
         android:fontFamily="@font/inter_bold"
