Add listener on time fragment

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#00215A</color>
     <color name="white4">#EAEBF8</color>
-	<color name="darkblue">#00215A</color>
+	<color name="darkblue">#274882</color>
 	<color name="green1">#BBF5C4</color>
 	<color name="red1">#EFC4C4</color>
 	<color name="blue1">#6D72AF</color>
