--- a/app/src/main/res/layout/rent_time.xml
+++ b/app/src/main/res/layout/rent_time.xml
@@ -50,7 +50,6 @@
         android:background="@color/blue"
         android:fontFamily="@font/inter_bold"
         android:gravity="center"
-        android:paddingTop="15dp"
         android:text="Выберите время бронирования"
         android:textColor="@color/white"
         android:textSize="19sp"
@@ -63,10 +62,9 @@
         android:id="@+id/back_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:src="@drawable/back_button"
-        app:layout_constraintEnd_toEndOf="@+id/textView12"
-        app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintStart_toStartOf="@+id/textView12"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
