--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,34 +35,26 @@
     </style>
 
 
-    <style name="CalenderViewDateCustomText" parent="android:Widget.CalendarView">
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorAccent">@color/darkblue</item>
+
+        <item name="android:textColorPrimary">@color/white</item>
+
+    </style>
+
+    <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
         <item name="android:textColor">@color/white</item>
-        <item name="android:colorPrimary">@color/white</item>
-        <item name="android:textColorTertiary">@color/white</item>
+        <item name="android:fontFamily">@font/inter_regular</item>
+        <item name="android:textSize">15sp</item>
 
-
-        <item name="android:background">@drawable/button_background</item>
         <item name="android:weekNumberColor">@color/white</item>
-        <item name="android:yearListSelectorColor">@color/white</item>
-
-
-
     </style>
 
     <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
-        <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:yearListSelectorColor">@color/white</item>
-        <item name="android:startYear">@color/white</item>
-        <item name="android:endYear">@color/white</item>
-
-        <item name="android:headerYearTextAppearance">@color/white</item>
-
-
     </style>
-
     <style name="DividerVertical">
-        <item name="android:background">@color/grey</item>
+        <item name="android:background">@color/blue</item>
     </style>
 
     <style name="Divider.Horizontal" parent="DividerVertical">
