--- a/app/src/main/res/layout/rent_time.xml
+++ b/app/src/main/res/layout/rent_time.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:layout_above="@id/booking_button"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="38dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/booking_button"
@@ -26,21 +26,22 @@
         android:id="@+id/booking_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="90dp"
-        android:layout_marginEnd="90dp"
+        android:layout_marginHorizontal="80dp"
+        android:textAlignment="center"
+
         android:layout_marginBottom="20dp"
         android:background="@drawable/blue_shape"
         android:fontFamily="@font/inter_bold"
         android:padding="16dp"
+        android:gravity="center"
         android:text="Забронировать"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="19sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.AppCompatButton>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/textView12"
