--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,7 +36,7 @@
 
 
     <style name="CalenderViewCustom" parent="Theme.AppCompat">
-        <item name="colorAccent">@color/darkblue</item>
+        <item name="colorAccent">@color/blue5</item>
 
         <item name="android:textColorPrimary">@color/white</item>
 
@@ -44,8 +44,7 @@
 
     <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
         <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/inter_regular</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">@font/inter_light</item>
 
         <item name="android:weekNumberColor">@color/white</item>
     </style>
@@ -54,12 +53,12 @@
         <item name="android:textColor">@color/white</item>
     </style>
     <style name="DividerVertical">
-        <item name="android:background">@color/blue</item>
+        <item name="android:background">?android:attr/listDivider</item>
     </style>
 
     <style name="Divider.Horizontal" parent="DividerVertical">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">1dp</item> // You can change thickness here.
+        <item name="android:layout_height">5dp</item> // You can change thickness here.
 
     </style>
 
