--- a/app/src/main/res/layout/fragment_cancelation.xml
+++ b/app/src/main/res/layout/fragment_cancelation.xml
@@ -23,7 +23,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rent_inits_recycler"
-        android:padding="20dp"
+        android:paddingVertical="30dp"
+        android:paddingHorizontal="30dp"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
