--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".RegisterFragment">
 
     <androidx.cardview.widget.CardView
@@ -45,6 +46,7 @@
                 android:id="@+id/FIO_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
 
                 android:layout_marginBottom="28dp"
                 android:background="@drawable/button_time_shape"
@@ -66,6 +68,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
 
                 android:layout_marginBottom="36dp"
                 android:background="@drawable/button_time_shape"
@@ -86,6 +89,7 @@
                 android:id="@+id/password_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
 
                 android:layout_marginTop="220dp"
                 android:background="@drawable/button_time_shape"
@@ -106,12 +110,13 @@
                 android:id="@+id/institute"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
 
                 android:layout_marginTop="304dp"
                 android:background="@drawable/button_time_shape"
                 android:fontFamily="@font/inter_light"
                 android:gravity="center"
-                android:hint="Группа"
+                android:hint="Институт"
 
                 android:inputType="textEmailAddress"
                 android:minHeight="48dp"
