--- a/app/src/main/res/layout/fragment_rent.xml
+++ b/app/src/main/res/layout/fragment_rent.xml
@@ -2,10 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
-
     android:layout_height="match_parent"
-    android:contentDescription="123"
+
+    android:background="@color/white"
     android:fillViewport="true"
     android:padding="0dp"
     tools:context=".RentFragment">
@@ -14,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:padding="@dimen/base_padding"
+
         tools:context=".RentFragment">
 
         <TextView
@@ -34,9 +33,9 @@
             android:id="@+id/calendarView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/CalenderViewCustom"
-            android:dateTextAppearance="@style/CalenderViewDateCustomText"
             android:background="@drawable/blue_shape"
+            android:dateTextAppearance="@style/CalenderViewDateCustomText"
+            android:theme="@style/CalenderViewCustom"
             android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +47,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Помещение:"
+            android:textColor="@color/grey"
+
             app:layout_constraintStart_toStartOf="@+id/calendarView"
             app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
@@ -71,9 +72,10 @@
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
+
                 android:layout_height="match_parent"
                 android:padding="12dp"
-                android:paddingLeft="10dp" />
+                android:textColor="@color/black" />
         </androidx.cardview.widget.CardView>
 
 
@@ -84,6 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/vertical_margin"
             android:text="Цель посещения:"
+            android:textColor="@color/grey"
             app:layout_constraintStart_toStartOf="@+id/describe_label_1"
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
@@ -95,6 +98,8 @@
             android:gravity="center_vertical"
             android:hint="Ваша цель посещения"
             android:paddingLeft="24dp"
+
+            android:textColor="@color/black"
             android:textColorHint="@drawable/selector"
             app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
             app:layout_constrainedWidth="true"
@@ -109,14 +114,14 @@
             android:layout_width="200dp"
             android:layout_height="55dp"
             android:layout_margin="@dimen/vertical_margin"
+            android:layout_marginTop="20dp"
             android:background="@drawable/button_background"
             android:fontFamily="@font/inter_bold"
+            android:gravity="center"
             android:text="Далее"
-            android:textSize="20sp"
             android:textAllCaps="false"
-            android:layout_marginTop="20dp"
-
             android:textColor="@color/white"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/issue_text" />
