--- a/app/src/main/res/layout/rent_time.xml
+++ b/app/src/main/res/layout/rent_time.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@color/white"
+    android:layout_gravity="center"
 
     tools:context=".RentFragment">
 
@@ -12,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/booking_button"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginHorizontal="@dimen/horizontal_margin"
         android:layout_marginEnd="38dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/booking_button"
