--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/list_icon"
 
         android:id="@+id/info_item"
-        android:title="Info"
+        android:title="@string/infoTitle"
 
         />
     <item
@@ -15,14 +15,14 @@
         android:layout_height="wrap_content"
         android:icon="@drawable/calendar_icon"
         android:id="@+id/rent_item"
-        android:title="Rent"
+        android:title="@string/BookingTitle"
         />
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/profile_icon"
         android:id="@+id/profile_item"
-        android:title="Profile"
+        android:title="@string/ProfileTitle"
 
         />
 </menu>
