--- a/app/src/main/res/layout/list_time.xml
+++ b/app/src/main/res/layout/list_time.xml
@@ -9,9 +9,8 @@
     android:orientation="horizontal"
     android:layout_marginStart="16dp"
     android:layout_marginEnd="16dp"
-    android:padding="10dp">
-
-    <TextView
+    android:padding="10dp"
+>    <TextView
         android:id="@+id/time_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
