--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,5 +70,7 @@
 
     <style name="Divider">
         <item name="android:background">@color/black</item>
+        <item name="android:color">@color/black</item>
+
     </style>
 </resources>
