--- a/app/src/main/res/layout/admin_canceletion_fragment.xml
+++ b/app/src/main/res/layout/admin_canceletion_fragment.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/vertical_margin"
             android:fontFamily="@font/inter_bold"
-            android:text="Бронирование"
+            android:text="Бронирования"
             android:textColor="@color/darkblue"
             android:textSize="40sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +62,8 @@
             android:outlineAmbientShadowColor="@color/black"
             android:padding="@dimen/base_padding"
             app:cardBackgroundColor="@color/blue4"
+            android:layout_margin="@dimen/vertical_margin"
+
             app:cardCornerRadius="60dp"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toEndOf="@id/calendarView"
@@ -79,67 +81,23 @@
         </androidx.cardview.widget.CardView>
 
 
-        <TextView
-            android:id="@+id/describe_label_2"
-            style="@style/DescribeTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/vertical_margin"
-            android:text="Цель посещения:"
-            android:textColor="@color/grey"
-            app:layout_constraintStart_toStartOf="@+id/describe_label_1"
-            app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-        <EditText
-            android:id="@+id/issue_text"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/input_edittext_background"
-            android:gravity="center_vertical"
-            android:hint="Ваша цель посещения"
-            android:paddingLeft="24dp"
-
-            android:textColor="@color/black"
-            android:textColorHint="@color/blue4"
-            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintEnd_toEndOf="@id/cardView"
-            app:layout_constraintStart_toStartOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@id/describe_label_2">
-
-        </EditText>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/booking_button"
-            android:layout_width="200dp"
-            android:layout_height="55dp"
-            android:layout_margin="@dimen/vertical_margin"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/button_background"
-            android:fontFamily="@font/inter_bold"
-            android:gravity="center"
-            android:text="Далее"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/issue_text" />
-
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/booked"
-            android:layout_width="250dp"
-            android:layout_height="55dp"
-            android:layout_margin="@dimen/vertical_margin"
+            android:layout_width="270dp"
+            android:layout_height="63dp"
+            android:layout_marginVertical="20dp"
+            android:layout_marginTop="80dp"
             android:background="@drawable/button_background"
             android:fontFamily="@font/inter_bold"
-            android:text="Мои Бронирования"
+            android:text="Показать Бронирования"
+
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/booking_button" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
