--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -35,7 +35,7 @@
                 android:fontFamily="@font/inter_bold"
                 android:gravity="center"
                 android:text="Регистрация"
-                android:textColor="@color/white4"
+                android:textColor="@color/blue4"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -153,7 +153,7 @@
                 android:layout_marginBottom="5dp"
                 android:fontFamily="@font/inter_bold"
                 android:text="Уже есть аккаунт? Ввойдите"
-                android:textColor="@color/white4"
+                android:textColor="@color/blue4"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
