--- a/app/src/main/res/drawable/button_text_shape.xml
+++ b/app/src/main/res/drawable/button_text_shape.xml
@@ -5,5 +5,5 @@
         android:bottomRightRadius="12dp"
         android:topLeftRadius="12dp"
         android:topRightRadius="12dp" />
-    <solid android:color="@color/purple1" />
+    <solid android:color="@color/blue4" />
 </shape>
