Fix bugs in fragment_info & fragment_admin_calendar

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -5,26 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:contentDescription="123"
-    android:fillViewport="true"
     android:background="@color/white"
-
     android:padding="20dp"
-    android:paddingRight="20dp"
-    tools:context=".InfoFragment"
-    tools:layout_editor_absoluteX="1dp"
-    tools:layout_editor_absoluteY="1dp">
+    tools:context=".InfoFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:background="@color/white"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/base_padding"
         tools:context=".Info2">
 
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="78dp"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/inter_bold"
             android:gravity="center"
             android:text="Информация"
@@ -38,7 +34,7 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Общая информация:"
             android:textColor="@color/grey"
@@ -56,6 +52,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
+            android:layout_marginTop="@dimen/vertical_margin"
             android:text="Мой Дом - это приложение для резервирования специальных помещений Дома молодёжи РУТ МИИТ под мероприятия. Нужно провести конференцию? Организовать митап? Сделать профессиональные фотографии? Дом моложёжи РУТ МИИТ - это Ваш вариант!"
             android:textColor="@color/black"
             android:textSize="20dp"
@@ -67,7 +64,7 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/inter_extralight"
             android:text="График работы Дома:"
             android:textColor="@color/black"
@@ -98,7 +95,7 @@
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Адрес:"
             android:textColor="@color/grey"
@@ -112,8 +109,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_text_shape"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+
             android:text="ул. Образцова, 21"
             android:paddingLeft="10dp"
 
@@ -132,6 +128,8 @@
             android:text="Помещения"
             android:textColor="@color/blue"
             android:textSize="40dp"
+
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/adress" />
@@ -140,7 +138,6 @@
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Лекторий:"
             android:textColor="@color/grey"
@@ -176,12 +173,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/button_text_shape"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:padding="@dimen/base_padding"
             android:text="40 посадочных мест с мини-столиками, маркерная доска, жк-экран 60 дюймов"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:paddingLeft="10dp"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -191,7 +186,7 @@
             android:id="@+id/textView11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Переговорная:"
             android:textColor="@color/grey"
@@ -229,10 +224,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/button_text_shape"
-            android:paddingTop="10dp"
-            android:paddingLeft="10dp"
+            android:padding="@dimen/base_padding"
 
-            android:paddingBottom="10dp"
             android:text="12 посадочных мест, из них отдельная зона на 6 мест, маркерная доска"
             android:textColor="@color/black"
             android:textSize="20dp"
@@ -244,7 +237,7 @@
             android:id="@+id/textView13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Коворкинг:"
             android:textColor="@color/grey"
@@ -280,12 +273,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/button_text_shape"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:padding="@dimen/base_padding"
             android:text="8 рабочих мест с розетками, 11 посадочных мест, из них отдельная зона на 6 мест, маркерная доска"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:paddingLeft="10dp"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -295,7 +286,7 @@
             android:id="@+id/textView15"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Фотостудия:"
             android:textColor="@color/grey"
@@ -330,14 +321,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/button_text_shape"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:padding="@dimen/base_padding"
             android:text="два гримёрных зеркала, белый фотофон, хромакей, шторы блэкаут"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:paddingLeft="10dp"
 
+
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/carryVelocity" />
