--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -23,14 +23,12 @@
         android:textSize="48sp"
         app:layout_constraintBottom_toTopOf="@+id/cardView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
-        android:layout_width="319dp"
+        android:layout_width="match_parent"
         android:layout_height="431dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="80dp"
@@ -49,7 +47,7 @@
             android:layout_gravity="center_horizontal"
             android:background="@drawable/blue_shape"
 
-            android:padding="21dp">
+            android:padding="22dp">
 
 
             <TextView
@@ -62,6 +60,7 @@
                 android:text="Авторизация"
                 android:textColor="@color/white"
                 android:textSize="24sp"
+                app:layout_constraintBottom_toTopOf="@+id/emailSignIn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -72,14 +71,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="84dp"
                 android:background="@drawable/button_time_shape"
-                android:textColor="@color/black"
                 android:fontFamily="@font/inter_light"
                 android:gravity="center"
                 android:hint="Почта"
                 android:inputType="textEmailAddress"
                 android:padding="10dp"
+                android:textColor="@color/black"
                 android:textColorHint="@color/black"
                 android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/passwordSignIn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -99,9 +99,9 @@
                 android:padding="10dp"
                 android:textColorHint="@color/black"
                 android:textSize="20sp"
+                android:layout_marginBottom="20dp"
                 app:layout_constraintBottom_toTopOf="@+id/login_button"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/emailSignIn" />
 
