--- a/app/src/main/res/layout/fragment_cancelation.xml
+++ b/app/src/main/res/layout/fragment_cancelation.xml
@@ -10,7 +10,8 @@
     <TextView
         android:layout_width="match_parent"
         android:gravity="center"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/base_padding"
         android:id="@+id/my_rent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
